appId: dev.noriui.playground
---
- launchApp
- scrollUntilVisible:
    element:
      id: 'section-checkbox.default'
- tapOn:
    id: 'story-checkbox-default'
- scrollUntilVisible:
    element:
      id: 'section-switch.default'
- tapOn:
    id: 'story-switch-default'
